src/scss/_cim.scss
/* ... */
// Give the cat emoji and reset button equal width so the score
// is visually centered between them.
div.emoji-container,
a#reset-button {
    display: flex;
    justify-content: center;
    width: 3rem;
    flex-shrink: 0;

    @media only screen and (min-width: 769px) {
        width: 4rem;
    }
}

div.emoji-container {
    font-size: 3rem;
    // Compensate for emoji glyph asymmetry; removed when percentage is visible.
    padding-right: 0.5rem;

    @media only screen and (min-width: 769px) {
        font-size: 4rem;
    }
}

div.stats:has(.stats-percent:not(:empty)) div.emoji-container {
    padding-right: 0;
}

div.stats i.fa {
    font-size: 3rem;

    @media only screen and (min-width: 769px) {
        font-size: 4rem;
    }
}

div.selectors {
    display: flex;
    justify-content: center;
    margin-top: 2rem;
    margin-bottom: 1rem;
    max-height: 5vh; // Fallback
    max-height: 5dvh;
}

select.selector {
    margin-left: 2em;
    margin-right: 2em;
}

body.colorscheme-light div.stats.done.perfect span#stats-divider,
body.colorscheme-light div.stats.done.perfect span#stats-correct,
body.colorscheme-light div.stats.done span#stats-total {
    color: green;
}

body.colorscheme-dark div.stats.done.perfect span#stats-divider,
body.colorscheme-dark div.stats.done.perfect span#stats-correct,
body.colorscheme-dark div.stats.done span#stats-total {
    color: #00bf00;
}

div.stats-wrapper {
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

div.stats-display {
    font-size: 2em;
    font-weight: bold;
    text-align: center;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    white-space: nowrap;

    @media only screen and (max-width: 768px) {
        font-size: 1.2em;
        margin-left: 0.2em;
        margin-right: 0.2em;
    }
}

div.stats-display#sn-stats-display {
    display: none;

    font-size: 0.9em;

    &.visible {
        display: flex;
    }
}

div.stats-display span.stats-percent {
    font-size: 1em;
    margin-left: 0.3em;
}

div.flag-wrapper {
    margin-top: 0.5em;
    margin-left: 0.5em;
    margin-right: 0.5em;
    align-self: stretch;
    width: calc(33% - 1.1em);
    max-height: 30vh; // Fallback
    max-height: 30dvh;

    @media only screen and (max-width: 768px) {
        margin-left: 0.25em;
        margin-right: 0.25em;
        width: calc(50% - 0.51em);
    }

    display: none;
    opacity: 0;
}

div.flag-wrapper.visible {
    display: block;
    opacity: 1;
}

div.flag-wrapper.trainer {
    margin: 0.25rem;
    align-self: stretch;
    width: calc(33% - 0.6em);
}

div.flag-container.flags-expanded > div.flag-wrapper {
    @media only screen and (max-width: 768px) {
        width: calc(100% - 0.51em);
    }
}


div.flag-container.flags-compact > div.flag-wrapper {
    width: calc(25% - 1.2em);

    @media only screen and (max-width: 768px) {
        width: calc(33% - 1.1em);
    }
}

div.flag {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    position: relative;

    i.answer-icon {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateY(-50%) translateX(-50%);
    }
}

div.flag-correct {
    outline: 4px solid green;
}

div.flag-incorrect {
    outline: 4px solid red;
}

i.answer-icon {
    display: none;
    font-weight: bold;
    font-size: 3.5em;
    opacity: 0.75;
    z-index: 20;
}


i.answer-icon.correct {
    color: green;
    &:before {
        content: "\f00c";
        -webkit-text-stroke-width: 2px;
        -webkit-text-stroke-color: black;
    }
}
i.answer-icon.incorrect {
    color: red;
    &:before {
        content: "\f00d";
        -webkit-text-stroke-width: 2px;
        -webkit-text-stroke-color: black;
    }
}

div.flag-correct i.answer-icon.correct,
div.flag-incorrect i.answer-icon.incorrect {
    display: block;
}

body.colorscheme-dark div.flag {
    box-shadow: inset 0 0 0 2px white;
}

body.colorscheme-light div.flag {
    box-shadow: inset 0 0 0 2px black;
}

/* Normalize nav icon visual sizes and vertical alignment */
#home-button .fa {
    font-size: 1.19em;
    vertical-align: -0.05em;
}

#trainer-infobox-trigger .fa {
    font-size: 0.92em;
    vertical-align: 0.05em;
}

/* Container styles */
.infobox-container {
  display: inline-block;
  position: relative;
  font-size: 1.5rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;

  @media only screen and (min-width: 900px) {
      font-size: 2rem;
  }
}

.infobox-trigger {
    white-space: nowrap;
    text-decoration: none;

    &:focus, &:hover {
        text-decoration: none;
    }
}

#profile-text {
    display: inline-block;
    max-width: 5em;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: middle;
}

/* Infobox styles (for non-panel infoboxes like the pulldown) */
.infobox:not(.panel) {
  position: absolute;
  top: 5%;
  left: 50%;
  transform: translateX(-50%);
  width: 75vw; // Fallback
  width: 75dvw;
  @media only screen and (max-width: 400) {
      width: 95vw; // Fallback
      width: 95dvw;
  }
  max-height: 90vh;
  max-height: 90dvh;
  padding: 10px;
  overflow-y: auto;
  border: 1px solid #cccccc;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
  display: none;
  opacity: 0;
  transition: visibility 0s, opacity 0.3s;
  z-index: 100;
}

div.infobox#trainer-infobox {
    flex-direction: column;
}

div.infobox#trainer-infobox > div.box-title {
    flex-grow: 0;
    width: 100%;
    font-size: 1.5rem;
    font-weight: bold;
    text-align: center;
}

div.trainer-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    flex-grow: 1;
    width: 100%;
}
/* ... */

